--- a/packages/decap-cms-app/package.json
+++ b/packages/decap-cms-app/package.json
@@ -6,12 +6,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-app",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "main": "dist/decap-cms-app.js",
-  "module": "dist/decap-cms-app.mjs",
+  "main": "dist/decap-cms-app.umd.cjs",
+  "module": "dist/decap-cms-app.js",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-app.mjs",
-      "require": "./dist/decap-cms-app.js"
+      "import": "./dist/decap-cms-app.js",
+      "require": "./dist/decap-cms-app.umd.cjs"
     }
   },
   "files": [
