--- a/packages/decap-cms-core/package.json
+++ b/packages/decap-cms-core/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-core",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "main": "dist/decap-cms-core.js",
-  "module": "dist/decap-cms-core.mjs",
+  "main": "dist/decap-cms-core.umd.js",
+  "module": "dist/decap-cms-core.js",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-core.mjs",
-      "require": "./dist/decap-cms-core.js"
+      "import": "./dist/decap-cms-core.js",
+      "require": "./dist/decap-cms-core.umd.cjs"
     }
   },
   "files": [
