--- a/packages/decap-cms-lib-auth/package.json
+++ b/packages/decap-cms-lib-auth/package.json
@@ -5,19 +5,19 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-lib-auth",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "main": "dist/decap-cms-lib-auth.js",
-  "module": "dist/decap-cms-lib-auth.mjs",
-  "exports": {
-    ".": {
-      "import": "./dist/decap-cms-lib-auth.mjs",
-      "require": "./dist/decap-cms-lib-auth.js"
-    }
-  },
-  "license": "MIT",
   "files": [
     "src/",
     "dist/"
   ],
+  "main": "dist/decap-cms-lib-auth.umd.cjs",
+  "module": "dist/decap-cms-lib-auth.js",
+  "exports": {
+    ".": {
+      "import": "./dist/decap-cms-lib-auth.js",
+      "require": "./dist/decap-cms-lib-auth.umd.cjs"
+    }
+  },
+  "license": "MIT",
   "keywords": [
     "decap-cms"
   ],
