--- a/packages/decap-cms-lib-util/package.json
+++ b/packages/decap-cms-lib-util/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-lib-util",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "module": "dist/decap-cms-lib-util.mjs",
-  "main": "dist/decap-cms-lib-util.js",
+  "module": "dist/decap-cms-lib-util.js",
+  "main": "dist/decap-cms-lib-util.umd.cjs",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-lib-util.mjs",
-      "require": "./dist/decap-cms-lib-util.js"
+      "import": "./dist/decap-cms-lib-util.js",
+      "require": "./dist/decap-cms-lib-util.umd.cjs"
     }
   },
   "license": "MIT",
