--- a/packages/decap-cms-lib-widgets/package.json
+++ b/packages/decap-cms-lib-widgets/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-lib-widgets",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "main": "dist/decap-cms-lib-widgets.js",
-  "module": "dist/decap-cms-lib-widgets.mjs",
+  "main": "dist/decap-cms-lib-widgets.umd.cjs",
+  "module": "dist/decap-cms-lib-widgets.js",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-lib-widgets.mjs",
-      "require": "./dist/decap-cms-lib-widgets.js"
+      "import": "./dist/decap-cms-lib-widgets.js",
+      "require": "./dist/decap-cms-lib-widgets.umd.cjs"
     }
   },
   "license": "MIT",
