--- a/packages/decap-cms-media-library-uploadcare/package.json
+++ b/packages/decap-cms-media-library-uploadcare/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-media-library-uploadcare",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "module": "dist/decap-cms-media-library-uploadcare.mjs",
-  "main": "dist/decap-cms-media-library-uploadcare.js",
+  "module": "dist/decap-cms-media-library-uploadcare.js",
+  "main": "dist/decap-cms-media-library-uploadcare.umd.cjs",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-media-library-uploadcare.mjs",
-      "require": "./dist/decap-cms-media-library-uploadcare.js"
+      "import": "./dist/decap-cms-media-library-uploadcare.js",
+      "require": "./dist/decap-cms-media-library-uploadcare.umd.cjs"
     }
   },
   "license": "MIT",
