--- a/packages/decap-cms-widget-number/package.json
+++ b/packages/decap-cms-widget-number/package.json
@@ -6,12 +6,15 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-widget-number",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "module": "dist/decap-cms-widget-number.mjs",
-  "main": "dist/decap-cms-widget-number.js",
+  "files": [
+    "dist"
+  ],
+  "module": "dist/decap-cms-widget-number.js",
+  "main": "dist/decap-cms-widget-number.umd.cjs",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-widget-number.mjs",
-      "require": "./dist/decap-cms-widget-number.js"
+      "import": "./dist/decap-cms-widget-number.js",
+      "require": "./dist/decap-cms-widget-number.umd.cjs"
     }
   },
   "license": "MIT",
