--- a/packages/decap-cms-widget-string/package.json
+++ b/packages/decap-cms-widget-string/package.json
@@ -6,12 +6,12 @@
   "repository": "https://github.com/decaporg/decap-cms/tree/main/packages/decap-cms-widget-string",
   "bugs": "https://github.com/decaporg/decap-cms/issues",
   "type": "module",
-  "module": "dist/decap-cms-widget-string.mjs",
-  "main": "dist/decap-cms-widget-string.js",
+  "module": "dist/decap-cms-widget-string.js",
+  "main": "dist/decap-cms-widget-string.umd.cjs",
   "exports": {
     ".": {
-      "import": "./dist/decap-cms-widget-string.mjs",
-      "require": "./dist/decap-cms-widget-string.js"
+      "import": "./dist/decap-cms-widget-string.js",
+      "require": "./dist/decap-cms-widget-string.umd.cjs"
     }
   },
   "license": "MIT",
