--- a/packages/decap-server/package.json
+++ b/packages/decap-server/package.json
@@ -51,11 +51,8 @@
     "ts-jest": "^27.0.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "vite-node": "^2.1.2",
-    "rollup-plugin-node-externals": "^7.1.3",
-    "webpack": "^5.75.0",
-    "webpack-node-externals": "^3.0.0"
+    "rollup-plugin-node-externals": "^7.1.3"
   },
   "engines": {
     "node": ">=v10.22.1"
