--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "lint-quiet": "run-p -c --aggregate-output \"lint:* --quiet\"",
     "lint:css": "stylelint --ignore-path .gitignore \"packages/**/*.{css,js,jsx,ts,tsx}\"",
     "lint:js": "eslint --color --ignore-path .gitignore \"{{packages,scripts}/**/,}*.{js,jsx,ts,tsx}\"",
-    "lint:format": "prettier \"{{packages,scripts}/**/,}*.{js,jsx,ts,tsx,css}\" --list-different",
+    "lint:format": "prettier \"{{packages,scripts}/**/,}*.{js,jsx,ts,tsx,css}\" --check",
     "format": "npm run lint:js -- --fix --quiet && npm run format:prettier -- --write",
-    "format:prettier": "prettier \"{{packages,scripts}/**/,}*.{js,jsx,ts,tsx,css}\"",
+    "format:prettier": "prettier \"{{packages,scripts}/**/,}*.{js,jsx,ts,tsx,css}\" --write",
     "prepare": "husky install"
   },
   "browserslist": [
@@ -45,14 +45,13 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@emotion/eslint-plugin": "^11.0.0",
+    "@emotion/eslint-plugin": "^11.12.0",
     "@emotion/jest": "^11.11.0",
     "@octokit/rest": "^16.28.7",
     "@simonsmith/cypress-image-snapshot": "^8.1.2",
     "@storybook/addon-actions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
     "@storybook/react": "^7.5.1",
-    "@stylelint/postcss-css-in-js": "^0.37.2",
     "@swc/plugin-emotion": "^4.0.2",
     "@testing-library/dom": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.1",
@@ -63,8 +62,8 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^8.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "all-contributors-cli": "^6.0.0",
     "axios": "^1.6.0",
@@ -74,15 +73,18 @@
     "cypress-jest-adapter": "^0.1.1",
     "cypress-plugin-tab": "^1.0.0",
     "dotenv": "^10.0.0",
-    "eslint": "^8.12.0",
-    "eslint-plugin-cypress": "^2.6.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-unicorn": "^41.0.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^3.5.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-unicorn": "^56.0.0",
     "execa": "^5.0.0",
     "fs-extra": "^10.0.0",
     "gitlab": "^14.1.1",
+    "globals": "^15.11.0",
     "http-server": "^14.0.0",
     "husky": "^7.0.0",
     "jest": "^27.0.0",
@@ -97,9 +99,8 @@
     "npm": "^9.9.2",
     "npm-run-all": "^4.1.5",
     "nx": "^17.0.2",
-    "postcss": "^8.4.7",
-    "postcss-scss": "^4.0.3",
-    "prettier": "^2.3.0",
+    "postcss-styled-syntax": "^0.6.4",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
@@ -107,11 +108,10 @@
     "rimraf": "^3.0.0",
     "simple-git": "^3.0.0",
     "start-server-and-test": "^1.7.11",
-    "stylelint": "^14.5.3",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.9.4",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1",
+    "typescript": "^5.6.0",
+    "typescript-eslint": "^8.8.1",
     "unist-util-visit": "^1.4.0",
     "vite": "^5.4.8",
     "vite-plugin-dts": "^4.2.3",
@@ -130,7 +130,6 @@
   "private": true,
   "dependencies": {
     "emotion": "^11.0.0",
-    "eslint-config-prettier": "^8.0.0",
     "globby": "^12.0.0",
     "lerna": "^8.0.2"
   },
