--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,24 @@
     "useUnknownInCatchVariables": false,
     "baseUrl": "./",
     "paths": {
+      "decap-cms-app": ["packages/decap-cms-app/src"],
+      "decap-cms-backend-aws-cognito-github-proxy": [
+        "packages/decap-cms-backend-aws-cognito-github-proxy/src"
+      ],
+      "decap-cms-backend-azure": ["packages/decap-cms-backend-azure/src"],
       "decap-cms-backend-bitbucket": ["packages/decap-cms-backend-bitbucket/src"],
+      "decap-cms-backend-git-gateway": ["packages/decap-cms-backend-git-gateway/src"],
+      "decap-cms-backend-gitea": ["packages/decap-cms-backend-gitea/src"],
       "decap-cms-backend-github": ["packages/decap-cms-backend-github/src"],
       "decap-cms-backend-gitlab": ["packages/decap-cms-backend-gitlab/src"],
+      "decap-cms-backend-proxy": ["packages/decap-cms-backend-proxy/src"],
+      "decap-cms-backend-test": ["packages/decap-cms-backend-test/src"],
+      "decap-cms-core": ["packages/decap-cms-core/src"],
+      "decap-cms-lib-auth": ["packages/decap-cms-lib-auth/src"],
       "decap-cms-lib-util": ["packages/decap-cms-lib-util/src"],
-      "decap-cms-lib-widgets": ["packages/decap-cms-lib-widgets/src"]
+      "decap-cms-lib-widgets": ["packages/decap-cms-lib-widgets/src"],
+      "decap-cms-locales": ["packages/decap-cms-locales/src"],
+      "decap-cms-ui-default": ["packages/decap-cms-ui-default/src"]
     }
   },
   "include": ["**/src/**/*"],
