refactor: migrating from jest to vitest

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "reset": "npm run clean",
     "test": "npm run lint && npm run type-check && npm run test:unit",
     "test:ci": "npm run lint-quiet && npm run type-check && npm run test:unit",
-    "test:unit": "cross-env NODE_ENV=test jest --no-cache",
+    "test:unit": "vitest --config scripts/vitest.config.js --no-cache",
+    "test:unit:ui": "vitest --config scripts/vitest.config.js --ui --no-cache",
     "test:e2e": "npm run build:demo && npm run test:e2e:run",
     "test:e2e:ci": "npm run build:demo && npm run test:e2e:run-ci",
     "test:e2e:dev": "start-test develop 8080 test:e2e:exec-dev",
@@ -43,29 +44,30 @@
     "last 2 ChromeAndroid versions"
   ],
   "devDependencies": {
+    "@babel/preset-react": "^7.25.7",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@emotion/eslint-plugin": "^11.0.0",
-    "@emotion/jest": "^11.11.0",
+    "@emotion/babel-plugin": "^11.12.0",
+    "@emotion/babel-preset-css-prop": "^11.12.0",
+    "@emotion/eslint-plugin": "^11.12.0",
     "@octokit/rest": "^16.28.7",
     "@simonsmith/cypress-image-snapshot": "^8.1.2",
     "@storybook/addon-actions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
     "@storybook/react": "^7.5.1",
     "@stylelint/postcss-css-in-js": "^0.37.2",
-    "@swc/plugin-emotion": "^4.0.2",
-    "@testing-library/dom": "^8.0.0",
-    "@testing-library/jest-dom": "^5.11.1",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
     "@types/common-tags": "^1.8.0",
-    "@types/jest": "^27.0.0",
     "@types/js-base64": "^3.0.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^8.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/ui": "^2.1.2",
     "all-contributors-cli": "^6.0.0",
     "axios": "^1.6.0",
     "cache-me-outside": "^0.0.10",
@@ -74,21 +76,22 @@
     "cypress-jest-adapter": "^0.1.1",
     "cypress-plugin-tab": "^1.0.0",
     "dotenv": "^10.0.0",
-    "eslint": "^8.12.0",
-    "eslint-plugin-cypress": "^2.6.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-unicorn": "^41.0.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^3.5.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-unicorn": "^56.0.0",
     "execa": "^5.0.0",
     "fs-extra": "^10.0.0",
     "gitlab": "^14.1.1",
     "http-server": "^14.0.0",
     "husky": "^7.0.0",
-    "jest": "^27.0.0",
-    "jest-cli": "^27.0.0",
-    "jest-environment-jsdom": "^27.0.0",
     "js-yaml": "^4.0.0",
+    "jsdom": "^25.0.1",
     "mockserver-client": "^5.8.0",
     "mockserver-node": "^5.8.0",
     "ncp": "^2.0.0",
@@ -116,7 +119,9 @@
     "vite": "^5.4.8",
     "vite-plugin-dts": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
-    "vite-plugin-svgr": "4.2.0"
+    "vite-plugin-svgr": "4.2.0",
+    "vitest": "^2.1.2",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "workspaces": {
     "packages": [
@@ -137,5 +142,6 @@
   "resolutions": {
     "react-redux": "^7.2.0"
   },
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "type": "module"
 }
