--- a/package.json
+++ b/package.json
@@ -44,12 +44,19 @@
     "last 2 ChromeAndroid versions"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.25.7",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/babel-plugin": "^11.12.0",
     "@emotion/babel-preset-css-prop": "^11.12.0",
+    "@emotion/css": "^11.13.5",
     "@emotion/eslint-plugin": "^11.12.0",
+    "@emotion/react": "^11.14.0",
     "@octokit/rest": "^16.28.7",
     "@simonsmith/cypress-image-snapshot": "^8.1.2",
     "@storybook/addon-actions": "^7.5.1",
@@ -68,13 +75,16 @@
     "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^2.1.2",
+    "abort-controller": "^3.0.0",
     "all-contributors-cli": "^6.0.0",
     "axios": "^1.6.0",
     "cache-me-outside": "^0.0.10",
+    "common-tags": "^1.8.2",
     "cross-env": "^7.0.0",
     "cypress": "12.5.0",
     "cypress-jest-adapter": "^0.1.1",
     "cypress-plugin-tab": "^1.0.0",
+    "diacritics": "catalog:",
     "dotenv": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -90,24 +100,32 @@
     "gitlab": "^14.1.1",
     "http-server": "^14.0.0",
     "husky": "^7.0.0",
+    "immutable": "^5.1.3",
     "js-yaml": "^4.0.0",
     "jsdom": "^25.0.1",
+    "lodash": "^4.17.21",
     "mockserver-client": "^5.8.0",
     "mockserver-node": "^5.8.0",
     "ncp": "^2.0.0",
     "nock": "^13.0.0",
     "node-fetch": "^2.3.0",
+    "node-polyglot": "^2.6.0",
     "npm": "^9.9.2",
     "npm-run-all": "^4.1.5",
     "nx": "^17.0.2",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
     "prettier": "^2.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-immutable-proptypes": "^2.2.0",
+    "react-polyglot": "^0.7.2",
+    "react-router-dom": "^5.3.4",
     "react-test-renderer": "^18.2.0",
     "rehype": "^7.0.0",
     "rimraf": "^3.0.0",
+    "sanitize-filename": "catalog:",
     "simple-git": "^3.0.0",
     "start-server-and-test": "^1.7.11",
     "stylelint": "^14.5.3",
@@ -116,6 +134,8 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^4.9.4",
     "unist-util-visit": "^1.4.0",
+    "url-join": "^5.0.0",
+    "uuid": "^13.0.0",
     "vite": "^5.4.8",
     "vite-plugin-dts": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
@@ -134,10 +154,33 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.14.1",
+    "ajv": "^8.17.1",
+    "ajv-errors": "^3.0.0",
+    "ajv-keywords": "^5.1.0",
+    "dayjs": "^1.11.18",
+    "deepmerge": "^4.3.1",
+    "dompurify": "^3.2.7",
     "emotion": "^11.0.0",
     "eslint-config-prettier": "^8.0.0",
     "globby": "^12.0.0",
-    "lerna": "^8.0.2"
+    "history": "^5.3.0",
+    "immer": "^10.1.3",
+    "js-sha256": "^0.11.1",
+    "lerna": "^8.0.2",
+    "localforage": "^1.10.0",
+    "react-aria-menubutton": "^7.0.3",
+    "react-select": "^5.10.2",
+    "react-textarea-autosize": "^8.5.9",
+    "react-transition-group": "^4.4.5",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "semaphore": "^1.1.0",
+    "unified": "^11.0.5",
+    "unist-builder": "^4.0.0",
+    "unist-util-is": "^6.0.0",
+    "yaml": "^2.8.1"
   },
   "resolutions": {
     "react-redux": "^7.2.0"
