--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,67 @@
     "useUnknownInCatchVariables": false,
     "baseUrl": "./",
     "paths": {
-      "decap-cms-backend-bitbucket": ["packages/decap-cms-backend-bitbucket/src"],
-      "decap-cms-backend-github": ["packages/decap-cms-backend-github/src"],
-      "decap-cms-backend-gitlab": ["packages/decap-cms-backend-gitlab/src"],
+      // Packages Lib
+      "decap-cms-lib-analytics": ["packages/decap-cms-lib-analytics/src"],
+      "decap-cms-lib-auth": ["packages/decap-cms-lib-auth/src"],
       "decap-cms-lib-util": ["packages/decap-cms-lib-util/src"],
       "decap-cms-lib-widgets": ["packages/decap-cms-lib-widgets/src"],
-      "decap-cms-locales": ["packages/decap-cms-locales/src"],
+
+      // UI Packages
       "decap-cms-ui-default": ["packages/decap-cms-ui-default/src"],
-      "decap-cms-widget-object": ["packages/decap-cms-widget-object/src"]
+      "decap-cms-ui-next": ["packages/decap-cms-ui-next/src"],
+
+      // Core Packages
+      "decap-cms-core": ["packages/decap-cms-core/src"],
+      "decap-cms-app": ["packages/decap-cms-app/src"],
+      "decap-cms": ["packages/decap-cms/src"],
+      "decap-cms-default-exports": ["packages/decap-cms-default-exports/src"],
+
+      // Backend Packages
+      "decap-cms-backend-aws-cognito-github-proxy": [
+        "packages/decap-cms-backend-aws-cognito-github-proxy/src"
+      ],
+      "decap-cms-backend-azure": ["packages/decap-cms-backend-azure/src"],
+      "decap-cms-backend-bitbucket": ["packages/decap-cms-backend-bitbucket/src"],
+      "decap-cms-backend-git-gateway": ["packages/decap-cms-backend-git-gateway/src"],
+      "decap-cms-backend-gitea": ["packages/decap-cms-backend-gitea/src"],
+      "decap-cms-backend-github": ["packages/decap-cms-backend-github/src"],
+      "decap-cms-backend-gitlab": ["packages/decap-cms-backend-gitlab/src"],
+      "decap-cms-backend-proxy": ["packages/decap-cms-backend-proxy/src"],
+      "decap-cms-backend-test": ["packages/decap-cms-backend-test/src"],
+
+      // Widget Packages
+      "decap-cms-widget-boolean": ["packages/decap-cms-widget-boolean/src"],
+      "decap-cms-widget-code": ["packages/decap-cms-widget-code/src"],
+      "decap-cms-widget-colorstring": ["packages/decap-cms-widget-colorstring/src"],
+      "decap-cms-widget-datetime": ["packages/decap-cms-widget-datetime/src"],
+      "decap-cms-widget-file": ["packages/decap-cms-widget-file/src"],
+      "decap-cms-widget-image": ["packages/decap-cms-widget-image/src"],
+      "decap-cms-widget-list": ["packages/decap-cms-widget-list/src"],
+      "decap-cms-widget-map": ["packages/decap-cms-widget-map/src"],
+      "decap-cms-widget-markdown": ["packages/decap-cms-widget-markdown/src"],
+      "decap-cms-widget-number": ["packages/decap-cms-widget-number/src"],
+      "decap-cms-widget-object": ["packages/decap-cms-widget-object/src"],
+      "decap-cms-widget-relation": ["packages/decap-cms-widget-relation/src"],
+      "decap-cms-widget-select": ["packages/decap-cms-widget-select/src"],
+      "decap-cms-widget-string": ["packages/decap-cms-widget-string/src"],
+      "decap-cms-widget-text": ["packages/decap-cms-widget-text/src"],
+
+      // Analytics Packages
+      "decap-cms-analytics-fathom": ["packages/decap-cms-analytics-fathom/src"],
+      "decap-cms-analytics-plausible": ["packages/decap-cms-analytics-plausible/src"],
+      "decap-cms-analytics-simple": ["packages/decap-cms-analytics-simple/src"],
+      "decap-cms-analytics-umami": ["packages/decap-cms-analytics-umami/src"],
+
+      // Media Library Packages
+      "decap-cms-media-library-cloudinary": ["packages/decap-cms-media-library-cloudinary/src"],
+      "decap-cms-media-library-uploadcare": ["packages/decap-cms-media-library-uploadcare/src"],
+
+      // Other Packages
+      "decap-cms-editor-component-image": ["packages/decap-cms-editor-component-image/src"],
+      "decap-cms-locales": ["packages/decap-cms-locales/src"],
+      "decap-cms-stock-photos-unsplash": ["packages/decap-cms-stock-photos-unsplash/src"],
+      "decap-server": ["packages/decap-server/src"]
     }
   },
   "include": ["**/src/**/*", "scripts/vite.js", "scripts/vitest-setup.js"],
