--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "scripts": {
     "start": "npm run develop",
     "develop": "nx run-many -t develop --parallel=999 --output-style=stream --exclude=decap-server",
@@ -53,6 +54,8 @@
     "@storybook/addon-links": "^7.5.1",
     "@storybook/react": "^7.5.1",
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "@swc/core": "^1.15.1",
+    "@swc/jest": "^0.2.39",
     "@swc/plugin-emotion": "^4.0.2",
     "@testing-library/dom": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.1",
